# python-demo

./: README.md  azure-pipelines.yml  setup.cfg
src/example_package/: int_check.py
src/example_package_tsolev_py.egg-info/: PKG-INFO  SOURCES.txt
