[metadata]
name = example-package-tsolev-py
version = 0.0.1
author = Andrey Tsolev
author_email = tsolev@example.com
description = A small example package
long_description = file README.md
long_description_content_type = textmarkdown
url = httpsgithub.compypasampleproject
project_urls =
    Bug Tracker = httpsgithub.compypasampleprojectissues
classifiers =
    Programming Language  Python  3
    License  OSI Approved  MIT License
    Operating System  OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src